fixes description alignment

--- a/frontend/css/item.css
+++ b/frontend/css/item.css
@@ -7,8 +7,6 @@
   cursor: pointer;
   margin-bottom: 3rem;
   border: 1px solid rgb(182, 182, 182);
-  min-height: 26rem;
-  padding-bottom: 4rem;
 
   /* ~~~~ FOR DEBUGGING~~~~*/
   /* border: 3px solid rgb(179, 0, 255); */
@@ -67,21 +65,10 @@
 .item-price {
   color: rgb(109, 109, 109);
   margin: 0.5rem;
-  position: absolute;
-  bottom: 1rem;
 }
 
 .item-description {
-  opacity: 1;
-  position: static;
-  padding: 0.5rem;
-  margin-top: 2.5rem;
-  font-size: 0.9rem;
-  color: #555;
-  text-align: center;
-  max-height: 4rem;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
+  opacity: 0;
+  position: absolute;
+  display: none; /* Ensure it's completely hidden */
 }
